logs/dag_id=dag_extract/run_id=manual__2024-05-28T185255.173118+0000/task_id=transform_sales_orders_task/attempt=1.log
[2024-05-28T18:52:57.818+0000] {taskinstance.py:1165} INFO - Dependencies all met for <TaskInstance: dag_extract.transform_sales_orders_task manual__2024-05-28T18:52:55.173118+00:00 [queued]>
[2024-05-28T18:52:57.831+0000] {taskinstance.py:1165} INFO - Dependencies all met for <TaskInstance: dag_extract.transform_sales_orders_task manual__2024-05-28T18:52:55.173118+00:00 [queued]>
[2024-05-28T18:52:57.831+0000] {taskinstance.py:1362} INFO - 
--------------------------------------------------------------------------------
[2024-05-28T18:52:57.832+0000] {taskinstance.py:1363} INFO - Starting attempt 1 of 1
[2024-05-28T18:52:57.833+0000] {taskinstance.py:1364} INFO - 
--------------------------------------------------------------------------------
[2024-05-28T18:52:57.848+0000] {taskinstance.py:1383} INFO - Executing <Task(PythonOperator): transform_sales_orders_task> on 2024-05-28 18:52:55.173118+00:00
[2024-05-28T18:52:57.852+0000] {standard_task_runner.py:55} INFO - Started process 680 to run task
[2024-05-28T18:52:57.854+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'dag_extract', 'transform_sales_orders_task', 'manual__2024-05-28T18:52:55.173118+00:00', '--job-id', '48', '--raw', '--subdir', 'DAGS_FOLDER/dag_extract.py', '--cfg-path', '/tmp/tmpf2fsooah']
[2024-05-28T18:52:57.855+0000] {standard_task_runner.py:83} INFO - Job 48: Subtask transform_sales_orders_task
[2024-05-28T18:52:57.910+0000] {task_command.py:376} INFO - Running <TaskInstance: dag_extract.transform_sales_orders_task manual__2024-05-28T18:52:55.173118+00:00 [running]> on host 9a04f700e4be
[2024-05-28T18:52:57.978+0000] {taskinstance.py:1592} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=dag_extract
AIRFLOW_CTX_TASK_ID=transform_sales_orders_task
AIRFLOW_CTX_EXECUTION_DATE=2024-05-28T18:52:55.173118+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2024-05-28T18:52:55.173118+00:00
[2024-05-28T18:52:57.984+0000] {taskinstance.py:1851} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 175, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 193, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/transform_sales_orders.py", line 47, in main
    order by date(date_order)"""
psycopg2.errors.SyntaxError: INSERT has more expressions than target columns
LINE 8:                 now() as ctl_datetime
                        ^

[2024-05-28T18:52:57.995+0000] {taskinstance.py:1406} INFO - Marking task as FAILED. dag_id=dag_extract, task_id=transform_sales_orders_task, execution_date=20240528T185255, start_date=20240528T185257, end_date=20240528T185257
[2024-05-28T18:52:58.007+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 48 for task transform_sales_orders_task (INSERT has more expressions than target columns
LINE 8:                 now() as ctl_datetime
                        ^
; 680)
[2024-05-28T18:52:58.027+0000] {local_task_job.py:164} INFO - Task exited with return code 1
[2024-05-28T18:52:58.046+0000] {local_task_job.py:273} INFO - 0 downstream tasks scheduled from follow-on schedule check
